--- a/week3/main.css
+++ b/week3/main.css
@@ -289,7 +289,7 @@ h3{
 
   .news-item a:hover{
     color: red;
-    text-decoration: underline;
+    text-decoration:underline;
   }
 
  .contact-item a{
@@ -310,7 +310,7 @@ h3{
 .contact-item {
     border: 3px solid grey;
     font-size: 20px;
-    height: 220px;
+    height: 300px;
     margin: 100px;
     width:28%;
     text-align: center;
@@ -333,6 +333,7 @@ h3{
 
   .contact-p{
    font-size:25px;
+   color: black;
   }
 
 
